--- a/package.json
+++ b/package.json
@@ -1,70 +1,52 @@
 {
-  "name": "react-template",
-  "private": true,
-  "version": "0.0.0",
+  "name": "discourse",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Discourse Learning Management System",
+  "main": "server.js",
   "scripts": {
-    "dev": "concurrently \"npm:client\" \"npm:server\"",
-    "server": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" node server.js",
-    "client": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" vite",
-    "build": "vite build",
-    "lint": "eslint ./src --quiet",
-    "preview": "vite preview",
     "start": "node server.js",
-    "start:dev": "cross-env NODE_OPTIONS='--max-old-space-size=8192' concurrently \"cross-env NODE_ENV=development vite\" \"cross-env NODE_ENV=development node -r dotenv/config ./server.js\""
+    "dev": "vite",
+    "build": "node node_modules/vite/dist/node/cli.js build && node compress.js",
+    "preview": "vite preview",
+    "start:dev": "cross-env NODE_ENV=development node server.js",
+    "test": "node server.test.js"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.7",
-    "@supabase/supabase-js": "^2.39.3",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/prop-types": "^15.7.11",
+    "@supabase/supabase-js": "^2.45.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "https": "^1.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "jspdf": "^3.0.1",
-    "jspdf-autotable": "^5.0.2",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "glob": "^11.0.3",
     "lowdb": "^7.0.1",
-    "mongodb": "^6.3.0",
     "node-fetch": "^3.3.2",
-    "openai": "^4.28.0",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^9.1.0",
-    "react-router-dom": "^6.22.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.25.1",
     "react-window": "^1.8.11",
-    "remark-breaks": "^4.0.0",
-    "stripe": "^18.2.1",
-    "styled-components": "^6.1.8",
-    "ws": "^8.18.2"
+    "selfsigned": "^2.4.1",
+    "stripe": "^17.1.0",
+    "ws": "^8.18.3",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "concurrently": "^9.1.2",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "terser": "^5.41.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.40",
+    "react-markdown": "^9.0.1",
+    "supertest": "^7.0.0",
+    "tailwindcss": "^3.4.7",
+    "tape": "^5.8.1",
     "vite": "^6.3.5",
     "vite-plugin-compression": "^0.5.1"
   },
-  "description": "A web application that generates comprehensive learning management system (LMS) modules from a single prompt, creating structured educational content with lessons, quizzes, and interactive elements.",
-  "main": "eslint.config.js",
   "keywords": [],
   "author": "",
   "license": "ISC"
