--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "react-window": "^1.8.11",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "selfsigned": "^2.4.1",
     "sharp": "^0.34.3",
     "stripe": "^17.1.0",
@@ -40,7 +42,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^10.1.0",
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.7",
     "tape": "^5.8.1",
