Implement comprehensive quiz data retention system and discourse logo integration
- Enhanced image service to use course prompt and lesson text for better context
- Added discourse logo to login and register pages
- Created QuizPersistenceService for localStorage-based quiz score retention
- Implemented automatic quiz score restoration on page reload
- Added background sync of localStorage scores with backend
- Added page visibility and beforeunload event listeners for data persistence
- Updated .gitignore to preserve discourse logo file
- Enhanced debug utilities with quiz persistence testing functions

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ public/api-proxy.php
 public/.htaccess
 public/sw.js
 public/manifest.json
+
+# Discourse logo (should be preserved on server)
+public/assets/images/discourse logo.png
