Fix discourse logo 404 error by using URL-safe filenames and SVG fallback
- Changed filename from 'discourse logo.png' to 'discourse-logo.png' (URL-safe)
- Created SVG logo as primary fallback to prevent 404 errors
- Updated Login and Register components to use SVG with PNG fallback
- Added error handling for logo loading
- Updated .gitignore and documentation
- Fixed URL encoding issues that caused 404 errors

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,5 @@ public/sw.js
 public/manifest.json
 
 # Discourse logo (should be preserved on server)
-public/assets/images/discourse logo.png
+public/assets/images/discourse-logo.png
+public/assets/images/discourse-logo.svg
