--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,5 @@ public/sw.js
 public/manifest.json
 
 # Discourse logo (should be preserved on server)
-public_html/assets/images/discourse-logo.png
-public_html/assets/images/discourse-logo.svg
+domains/thediscourse.ai/public_html/assets/images/discourse-logo.png
+domains/thediscourse.ai/public_html/assets/images/discourse-logo.svg
