Simplify logo implementation to use existing frontend logo
- Removed SVG fallback system and local file management
- Updated Login and Register components to use PNG logo directly
- Removed local directory structure since logo is managed on frontend server
- Updated .gitignore to reflect that logo is managed externally
- Logo path: /domains/thediscourse.ai/public_html/assets/images/discourse-logo.png

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,5 @@ public/.htaccess
 public/sw.js
 public/manifest.json
 
-# Discourse logo (should be preserved on server)
-domains/thediscourse.ai/public_html/assets/images/discourse-logo.png
-domains/thediscourse.ai/public_html/assets/images/discourse-logo.svg
+# Discourse logo (managed on frontend server)
+# Logo is located at: /domains/thediscourse.ai/public_html/assets/images/discourse-logo.png
