Fix logo loading by using correct relative path
- Updated Login and Register components to use /assets/images/discourse-logo.png
- Logo file is now properly located in public/assets/images/
- Build process correctly copies logo to dist/assets/images/
- Updated .gitignore to preserve the logo file
- Logo should now load correctly on frontend

--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,5 @@ public/.htaccess
 public/sw.js
 public/manifest.json
 
-# Discourse logo (managed on frontend server)
-# Logo is located at: /domains/thediscourse.ai/public_html/assets/images/discourse-logo.png
+# Discourse logo (should be preserved on server)
+public/assets/images/discourse-logo.png
