--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.19.2",
     "glob": "^11.0.3",
     "lowdb": "^7.0.1",
+    "markdown-it": "^14.1.0",
+    "marked": "^16.1.2",
     "node-fetch": "^3.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
