--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
     "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.5.0",
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.7",
     "tape": "^5.8.1",
