Replace Web Speech API with speak-tts library for robust TTS: - Completely rewrote TTSService to use speak-tts library - Added proper initialization and error handling - Set British female voice (Google UK English Female) - Maintained session-specific services and coordinator - Should eliminate all interrupted errors and provide reliable TTS - speak-tts handles Web Speech API issues much better than raw implementation

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "remark-gfm": "^4.0.1",
     "selfsigned": "^2.4.1",
     "sharp": "^0.34.3",
+    "speak-tts": "^2.0.8",
     "stripe": "^17.1.0",
     "ws": "^8.18.3"
   },
