--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.1.5",
+    "express-slow-down": "^2.0.1",
     "glob": "^11.0.3",
+    "helmet": "^7.1.0",
     "lowdb": "^7.0.1",
     "markdown-it": "^14.1.0",
     "marked": "^16.1.2",
@@ -39,6 +42,7 @@
     "sharp": "^0.34.3",
     "speak-tts": "^2.0.8",
     "stripe": "^17.1.0",
+    "user-agents": "^1.0.35",
     "ws": "^8.18.3"
   },
   "devDependencies": {
