Fix API configuration - rebuild frontend with correct VITE_API_BASE_URL

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ HOST=0.0.0.0
 NODE_ENV=production
 
 # Frontend API Configuration (use your backend server IP)
-VITE_API_BASE_URL=http://31.97.115.145:4003
+VITE_API_BASE_URL=https://www.thediscourse.ai
 
 # Backend Supabase Configuration (required for auth)
 SUPABASE_URL=https://gaapqvkjblqvpokmhlmh.supabase.co
