--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ HOST=0.0.0.0
 NODE_ENV=production
 
 # Frontend API Configuration (use your backend server IP)
-VITE_API_BASE_URL=https://www.thediscourse.ai
+VITE_API_BASE_URL=127.0.0.1:4003
 
 # Backend Supabase Configuration (required for auth)
 SUPABASE_URL=https://gaapqvkjblqvpokmhlmh.supabase.co
