--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.1.5",
     "express-slow-down": "^2.0.1",
+    "framer-motion": "^12.23.12",
     "glob": "^11.0.3",
     "helmet": "^7.1.0",
     "lowdb": "^7.0.1",
