--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.2",
     "express-rate-limit": "^7.1.5",
     "express-slow-down": "^2.0.1",
     "framer-motion": "^12.23.12",
