Remove debug courses button and fix report problem endpoint
- Removed debug courses button from dashboard
- Removed debugUserCourses from API service
- Fixed report problem endpoint with better error handling and logging
- Added proper form data parsing for multipart requests
- Enhanced error messages for better debugging
- Added reportProblem function to API service
- Updated ReportProblem component to use API service

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "vite",
-    "build": "node node_modules/vite/dist/node/cli.js build && node compress.js",
+    "build": "node --max-old-space-size=4096 node_modules/vite/dist/node/cli.js build && node compress.js",
+    "build:clean": "rm -rf dist node_modules/.vite && npm run build",
+    "build:windows": "node --max-old-space-size=4096 node_modules/vite/dist/node/cli.js build && node compress.js",
     "preview": "vite preview",
     "start:dev": "cross-env NODE_ENV=development node server.js",
     "test": "node server.test.js"
