--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@hcaptcha/react-hcaptcha": "^1.12.1",
+    "@stripe/stripe-js": "^7.9.0",
     "@supabase/supabase-js": "^2.45.0",
     "async": "^3.2.6",
     "axios": "^1.7.2",
@@ -49,7 +50,7 @@
     "selfsigned": "^2.4.1",
     "sharp": "^0.34.3",
     "speak-tts": "^2.0.8",
-    "stripe": "^17.1.0",
+    "stripe": "^17.7.0",
     "user-agents": "^1.0.35",
     "ws": "^8.18.3"
   },
@@ -58,7 +59,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.5.0",
+    "react-syntax-highlighter": "^5.8.0",
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.7",
     "tape": "^5.8.1",
