--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,25 +62,44 @@ jobs:
             echo "Clearing image search cache..."
             curl -s -X POST https://thediscourse.ai/api/image/clear-search-cache || echo "Image cache clear failed (server may not be running yet)"
             
-            # Restart PM2 processes (don't wait for server startup)
-            echo "Restarting PM2 processes..."
-            cd /root/discourse
-            pm2 restart all
+            # Stop any existing Node.js server processes
+            echo "Stopping existing Node.js server processes..."
+            pkill -f "node server.js" || echo "No existing server processes found"
             
-            # Wait a moment for restart to complete
-            sleep 3
+            # Wait a moment for processes to stop
+            sleep 2
+            
+            # Start the Node.js server in the background
+            echo "Starting Node.js server..."
+            cd /root/discourse
+            nohup node server.js > server.log 2>&1 &
+            
+            # Wait for server to start up
+            echo "Waiting for server to start..."
+            sleep 5
+            
+            # Check if server is running
+            if curl -s -f http://localhost:4003/api/health > /dev/null; then
+              echo "Server is running successfully on port 4003"
+            else
+              echo "Warning: Server may not be fully started yet"
+            fi
             
             # Clear image search cache after restart to ensure duplicate fix takes effect
             echo "Clearing image search cache after restart..."
             curl -s -X POST https://thediscourse.ai/api/image/clear-search-cache || echo "Image cache clear failed"
             
-            # Show status
-            echo "PM2 status:"
-            pm2 status
+            # Show server process status
+            echo "Server process status:"
+            ps aux | grep "node server.js" | grep -v grep || echo "No server processes found"
             
-            # Show recent logs to verify deployment (with timeout to prevent hanging)
-            echo "Recent application logs:"
-            timeout 10s pm2 logs --lines 10 || echo "Log viewing completed or timed out"
+            # Show recent server logs
+            echo "Recent server logs:"
+            if [ -f server.log ]; then
+              tail -20 server.log || echo "No server logs found"
+            else
+              echo "Server log file not found"
+            fi
             
             echo "=== VPS deployment completed ==="
 
