--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "description": "Discourse Learning Management System",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "pm2 start ecosystem.config.cjs",
+    "stop": "pm2 stop ecosystem.config.cjs",
+    "restart": "pm2 restart ecosystem.config.cjs",
+    "reload": "pm2 reload ecosystem.config.cjs",
+    "delete": "pm2 delete ecosystem.config.cjs",
+    "logs": "pm2 logs discourse-app",
+    "status": "pm2 status",
+    "monit": "pm2 monit",
     "dev": "vite",
     "build": "node --max-old-space-size=4096 node_modules/vite/dist/node/cli.js build && node compress.js",
     "build:clean": "rm -rf dist node_modules/.vite && npm run build",
     "build:windows": "node --max-old-space-size=4096 node_modules/vite/dist/node/cli.js build && node compress.js",
     "preview": "vite preview",
-    "start:dev": "cross-env NODE_ENV=development node server.js",
+    "start:dev": "cross-env NODE_ENV=development pm2 start ecosystem.config.cjs --env development",
     "test": "node server.test.js"
   },
   "dependencies": {
