--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "description": "Discourse Learning Management System",
   "main": "server.js",
   "scripts": {
-    "start": "pm2 start ecosystem.config.cjs",
-    "stop": "pm2 stop ecosystem.config.cjs",
-    "restart": "pm2 restart ecosystem.config.cjs",
-    "reload": "pm2 reload ecosystem.config.cjs",
-    "delete": "pm2 delete ecosystem.config.cjs",
+    "start": "pm2 start ecosystem.config.js",
+    "stop": "pm2 stop ecosystem.config.js",
+    "restart": "pm2 restart ecosystem.config.js",
+    "reload": "pm2 reload ecosystem.config.js",
+    "delete": "pm2 delete ecosystem.config.js",
     "logs": "pm2 logs discourse-app",
     "status": "pm2 status",
     "monit": "pm2 monit",
@@ -18,7 +18,7 @@
     "build:clean": "rm -rf dist node_modules/.vite && npm run build",
     "build:windows": "node --max-old-space-size=4096 node_modules/vite/dist/node/cli.js build && node compress.js",
     "preview": "vite preview",
-    "start:dev": "cross-env NODE_ENV=development pm2 start ecosystem.config.cjs --env development",
+    "start:dev": "cross-env NODE_ENV=development pm2 start ecosystem.config.js --env development",
     "test": "node server.test.js"
   },
   "dependencies": {
