Revert to PM2 process management with local installation and proper ES module compatibility

--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "description": "Discourse Learning Management System",
   "main": "server.js",
   "scripts": {
-    "start": "pm2 start ecosystem.config.js",
-    "stop": "pm2 stop ecosystem.config.js",
-    "restart": "pm2 restart ecosystem.config.js",
-    "reload": "pm2 reload ecosystem.config.js",
-    "delete": "pm2 delete ecosystem.config.js",
-    "logs": "pm2 logs discourse-app",
-    "status": "pm2 status",
-    "monit": "pm2 monit",
+    "start": "npx pm2 start ecosystem.config.cjs",
+    "stop": "npx pm2 stop ecosystem.config.cjs",
+    "restart": "npx pm2 restart ecosystem.config.cjs",
+    "reload": "npx pm2 reload ecosystem.config.cjs",
+    "delete": "npx pm2 delete ecosystem.config.cjs",
+    "logs": "npx pm2 logs discourse-app",
+    "status": "npx pm2 status",
+    "monit": "npx pm2 monit",
     "dev": "vite",
     "build": "node --max-old-space-size=4096 node_modules/vite/dist/node/cli.js build && node compress.js",
     "build:clean": "rm -rf dist node_modules/.vite && npm run build",
     "build:windows": "node --max-old-space-size=4096 node_modules/vite/dist/node/cli.js build && node compress.js",
     "preview": "vite preview",
-    "start:dev": "cross-env NODE_ENV=development pm2 start ecosystem.config.js --env development",
+    "start:dev": "cross-env NODE_ENV=development npx pm2 start ecosystem.config.cjs --env development",
     "test": "node server.test.js"
   },
   "dependencies": {
@@ -64,6 +64,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "pm2": "^6.0.8",
     "postcss": "^8.4.40",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^5.8.0",
