Fix PM2 configuration: Switch to JSON format for ES module compatibility and install @heroicons/react

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "description": "Discourse Learning Management System",
   "main": "server.js",
   "scripts": {
-    "start": "npx pm2 start ecosystem.config.cjs",
-    "stop": "npx pm2 stop ecosystem.config.cjs",
-    "restart": "npx pm2 restart ecosystem.config.cjs",
-    "reload": "npx pm2 reload ecosystem.config.cjs",
-    "delete": "npx pm2 delete ecosystem.config.cjs",
+    "start": "npx pm2 start ecosystem.config.json",
+    "stop": "npx pm2 stop ecosystem.config.json",
+    "restart": "npx pm2 restart ecosystem.config.json",
+    "reload": "npx pm2 reload ecosystem.config.json",
+    "delete": "npx pm2 delete ecosystem.config.json",
     "logs": "npx pm2 logs discourse-app",
     "status": "npx pm2 status",
     "monit": "npx pm2 monit",
@@ -18,11 +18,12 @@
     "build:clean": "rm -rf dist node_modules/.vite && npm run build",
     "build:windows": "node --max-old-space-size=4096 node_modules/vite/dist/node/cli.js build && node compress.js",
     "preview": "vite preview",
-    "start:dev": "cross-env NODE_ENV=development npx pm2 start ecosystem.config.cjs --env development",
+    "start:dev": "cross-env NODE_ENV=development npx pm2 start ecosystem.config.json --env development",
     "test": "node server.test.js"
   },
   "dependencies": {
     "@hcaptcha/react-hcaptcha": "^1.12.1",
+    "@heroicons/react": "^2.2.0",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/supabase-js": "^2.45.0",
     "async": "^3.2.6",
