Fix Stripe payment success flow and JSON parsing error
- Enhanced Stripe webhook to automatically create user accounts after payment
- Fixed success URL to redirect to login instead of register
- Added automatic email verification sending after account creation
- Updated Login component to handle payment success and pre-fill email
- Streamlined registration flow to eliminate redundant account creation
- Added proper error handling and user experience improvements
- Resolves 'Unexpected token <, <!DOCTYPE is not valid JSON' error

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "discourse",
   "version": "1.0.0",
-  // "type": "module", // Removed to use CommonJS for server compatibility
+  "type": "module",
   "description": "Discourse Learning Management System",
   "main": "server.js",
   "scripts": {
